--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   ],
   "devDependencies": {
     "@parcel/packager-ts": "^2.10.2",
+    "@parcel/transformer-inline-string": "^2.10.2",
     "@parcel/transformer-sass": "^2.10.2",
     "@types/assert": "^1.5.10",
+    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
@@ -51,6 +53,7 @@
     "path-browserify": "^1.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "simulation": "^3.0.0",
     "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier-scss": "^1.0.0"
@@ -69,6 +72,7 @@
   "dependencies": {
     "assert": "^2.1.0",
     "chart.js": "^4.4.0",
+    "lodash": "^4.17.21",
     "process": "^0.11.10"
   }
 }
