--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "@parcel/packager-ts": "^2.10.2",
     "@parcel/transformer-inline-string": "^2.10.2",
     "@parcel/transformer-sass": "^2.10.2",
-    "@types/assert": "^1.5.10",
-    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
@@ -70,9 +68,13 @@
     "format": "prettier --write '.'"
   },
   "dependencies": {
+    "@types/assert": "^1.5.10",
+    "@types/lodash": "^4.14.202",
+    "@types/sortablejs": "^1.15.7",
     "assert": "^2.1.0",
     "chart.js": "^4.4.0",
     "lodash": "^4.17.21",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "sortablejs": "^1.15.1"
   }
 }
