--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "serve": "parcel serve --dist-dir dist-dev",
     "clean": "rimraf assets index.html",
     "prebuild": "npm run clean",
-    "build": "parcel build --public-url '.' --dist-dir '.'",
+    "build": "parcel build --no-cache --public-url '.' --dist-dir '.'",
     "format": "prettier --write '.'"
   },
   "dependencies": {
