--- a/package.json
+++ b/package.json
@@ -69,10 +69,13 @@
     "format": "prettier --write '.'"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@types/assert": "^1.5.10",
+    "@types/bootstrap": "^5.2.10",
     "@types/lodash": "^4.14.202",
     "@types/sortablejs": "^1.15.7",
     "assert": "^2.1.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "lodash": "^4.17.21",
     "process": "^0.11.10",
