--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "not OperaMini all"
   ],
   "devDependencies": {
-    "@parcel/packager-ts": "^2.10.2",
-    "@parcel/transformer-inline-string": "^2.10.2",
-    "@parcel/transformer-sass": "^2.10.2",
+    "@parcel/packager-ts": "^2.12.0",
+    "@parcel/plugin": "^2.12.0",
+    "@parcel/transformer-inline-string": "^2.12.0",
+    "@parcel/transformer-sass": "^2.12.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
@@ -46,8 +47,8 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "parcel": "^2.10.2",
-    "parcel-namer-custom": "^0.2.0",
+    "parcel": "^2.12.0",
+    "parcel-namer-rewrite": "^2.10.3-rc.2",
     "path-browserify": "^1.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
@@ -58,9 +59,12 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "tsx": "^4.7.0"
   },
-  "parcel-namer-custom": {
-    ".html$": "[name].[type]",
-    "^.*$": "assets/[name].[hash].[type]"
+  "parcel-namer-rewrite": {
+    "silent": true,
+    "rules": {
+      "(.*).html": "$1.html",
+      "(.*)\\.([^.]*)": "assets/$1.{hash}.$2"
+    }
   },
   "scripts": {
     "serve": "parcel serve --dist-dir dist-dev",
