Split off dependencies from `node_modules` into separate shared bundle
This is a first attempt to move external dependencies into a dedicated
shared bundle that is only rebuilt when the list of imported external
modules changes.

--- a/package.json
+++ b/package.json
@@ -59,6 +59,17 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "tsx": "^4.7.0"
   },
+  "@parcel/bundler-default": {
+    "manualSharedBundles": [
+      {
+        "name": "vendor",
+        "root": "src/ts/index.ts",
+        "assets": [
+          "node_modules/**/*"
+        ]
+      }
+    ]
+  },
   "parcel-namer-rewrite": {
     "silent": true,
     "rules": {
