--- a/package.json
+++ b/package.json
@@ -24,11 +24,6 @@
     ">= 0.5%",
     "last 2 major versions",
     "not dead",
-    "Chrome >= 60",
-    "Firefox >= 60",
-    "Firefox ESR",
-    "iOS >= 12",
-    "Safari >= 12",
     "not Explorer <= 11",
     "not OperaMini all"
   ],
@@ -47,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "events": "^3.3.0",
     "parcel": "^2.12.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
     "path-browserify": "^1.0.1",
@@ -57,7 +53,8 @@
     "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "typed-emitter": "^2.1.0"
   },
   "@parcel/bundler-default": {
     "manualSharedBundles": [
