--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier-scss": "^1.0.0",
+    "ts-essentials": "^9.4.1",
     "tsx": "^4.7.0",
     "typed-emitter": "^2.1.0"
   },
