--- a/src/.stylelintrc.json
+++ b/src/.stylelintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "stylelint-config-standard",
     "stylelint-config-html",
     "stylelint-config-standard-scss",
     "stylelint-config-prettier-scss"
