--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "events": "^3.3.0",
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
     "path-browserify": "^1.0.1",
@@ -83,6 +84,12 @@
     "prebuild": "npm run clean",
     "build": "parcel build --no-cache --public-url '.' --dist-dir '.'",
     "format": "prettier --write '.'",
+    "lint": "npm-run-all -s -c lint:**",
+    "lint:scripts": "eslint src",
+    "lint:styles": "stylelint 'src/{**/*,*}.{css,scss}'",
+    "fix": "npm-run-all -s -c fix:**",
+    "fix:scripts": "eslint --fix src",
+    "fix:styles": "stylelint --fix 'src/{**/*,*}.{css,scss}'",
     "convert-insightmaker-model": "tsx ./tools/convert-from-insight-maker.ts < src/insight-maker/CircularEconomyOfSmartPhones.InsightMaker > ./src/ts/circular-economy-model.ts; prettier --write ./src/ts/circular-economy-model.ts"
   },
   "dependencies": {
