--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "events": "^3.3.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
@@ -56,9 +55,7 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
-    "ts-essentials": "^9.4.1",
-    "tsx": "^4.7.0",
-    "typed-emitter": "^2.1.0"
+    "tsx": "^4.7.0"
   },
   "@parcel/bundler-default": {
     "manualSharedBundles": [
@@ -102,8 +99,11 @@
     "assert": "^2.1.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "events": "^3.3.0",
     "lodash": "^4.17.21",
     "process": "^0.11.10",
-    "sortablejs": "^1.15.1"
+    "sortablejs": "^1.15.1",
+    "ts-essentials": "^9.4.1",
+    "typed-emitter": "^2.1.0"
   }
 }
