--- a/package.json
+++ b/package.json
@@ -89,7 +89,10 @@
     "fix:scripts": "eslint --fix src",
     "fix:styles": "stylelint --fix 'src/{**/*,*}.{css,scss}'",
     "check-updates": "npm-check-updates",
-    "convert-insightmaker-model": "tsx ./tools/convert-from-insight-maker.ts < src/insight-maker/CircularEconomyOfSmartPhones.InsightMaker > ./src/ts/circular-economy-model.ts; prettier --write ./src/ts/circular-economy-model.ts"
+    "convert-insightmaker-model": "tsx ./tools/convert-from-insight-maker.ts < src/insight-maker/CircularEconomyOfSmartPhones.InsightMaker > ./src/ts/circular-economy-model.ts; prettier --write ./src/ts/circular-economy-model.ts",
+    "udp-websocket-bridge": "npm run udp-websocket-bridge:node",
+    "udp-websocket-bridge:websocat": "websocat -E -b ws-l:127.0.0.1:3339 udp-l:127.0.0.1:3333",
+    "udp-websocket-bridge:node": "tsx ./tools/udp-websocket-bridge.ts"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -106,6 +109,7 @@
     "process": "^0.11.10",
     "sortablejs": "^1.15.2",
     "ts-essentials": "^9.4.1",
-    "typed-emitter": "^2.1.0"
+    "typed-emitter": "^2.1.0",
+    "ws": "^8.16.0"
   }
 }
