--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
-    "path-browserify": "^1.0.1",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "serve-static": "^1.15.0",
@@ -99,15 +98,23 @@
     "@types/assert": "^1.5.10",
     "@types/bootstrap": "^5.2.10",
     "@types/lodash": "^4.14.202",
+    "@types/long": "^5.0.0",
     "@types/node": "^20.11.24",
     "@types/sortablejs": "^1.15.8",
+    "@types/ws": "^8.5.10",
     "assert": "^2.1.0",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.2",
     "events": "^3.3.0",
     "lodash": "^4.17.21",
+    "long": "^5.2.3",
+    "os-browserify": "^0.3.0",
+    "osc": "^2.4.4",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "sortablejs": "^1.15.2",
+    "stream-browserify": "^3.0.0",
     "ts-essentials": "^9.4.1",
     "typed-emitter": "^2.1.0",
     "ws": "^8.16.0"
