--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "url": "https://github.com/IMAGINARY/circular-economy/issues"
   },
   "homepage": "https://github.com/IMAGINARY/circular-economy#readme",
-  "source": "src/html/index.html",
+  "source": [
+    "src/html/index.html",
+    "src/html/marker.html"
+  ],
   "engines": {
     "npm": ">=10.1.0",
     "node": ">=20.9.0"
@@ -25,6 +28,7 @@
     "last 2 major versions",
     "not dead",
     "not Explorer <= 11",
+    "not KaiOS > 0",
     "not OperaMini all"
   ],
   "devDependencies": {
