--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "osc": "^2.4.4",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "rxjs": "^7.8.1",
     "sortablejs": "^1.15.2",
     "stream-browserify": "^3.0.0",
     "ts-essentials": "^9.4.1",
