--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.4.2",
     "events": "^3.3.0",
+    "hotkeys-js": "^3.13.7",
     "lodash": "^4.17.21",
     "long": "^5.2.3",
     "os-browserify": "^0.3.0",
