--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/assert": "^1.5.10",
     "@types/bootstrap": "^5.2.10",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.202",
     "@types/long": "^5.0.0",
     "@types/node": "^20.11.24",
@@ -111,6 +112,7 @@
     "chart.js": "^4.4.2",
     "events": "^3.3.0",
     "hotkeys-js": "^3.13.7",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "long": "^5.2.3",
     "os-browserify": "^0.3.0",
