--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "fix:styles": "stylelint --fix 'src/{**/*,*}.{css,scss}'",
     "generate": "npm-run-all -s -c generate:**",
     "generate:config-schema": "tsx ./tools/generate-config-types-and-schema.ts",
+    "generate:model-class": "npm run convert-insightmaker-model",
     "check-updates": "npm-check-updates",
     "convert-insightmaker-model": "tsx ./tools/convert-from-insight-maker.ts < src/insight-maker/CircularEconomyOfSmartPhones.InsightMaker > ./src/ts/circular-economy-model.ts; prettier --write ./src/ts/circular-economy-model.ts",
     "udp-websocket-bridge": "npm run udp-websocket-bridge:node",
