--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -55,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-vue": "^9.24.0",
     "npm-check-updates": "^16.14.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.12.0",
@@ -135,6 +139,7 @@
     "ts-essentials": "^9.4.1",
     "typeconv": "^2.3.1",
     "typed-emitter": "^2.1.0",
+    "vue": "^3.4.21",
     "ws": "^8.16.0"
   }
 }
