--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
+    "composite": true,
+    "tsBuildInfoFile": "../node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "allowJs": true,
+    "checkJs": true,
     "experimentalDecorators": true,
     "declaration": true,
     "declarationMap": true,
@@ -15,5 +20,5 @@
     "typeRoots": ["./@types", "../node_modules/@types"],
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["./ts/**/*"]
+  "include": ["./ts/**/*", "./vue/**/*.vue"]
 }
