--- a/package.json
+++ b/package.json
@@ -35,6 +35,16 @@
     "@parcel/plugin": "^2.12.0",
     "@parcel/transformer-inline-string": "^2.12.0",
     "@parcel/transformer-sass": "^2.12.0",
+    "@parcel/transformer-vue": "^2.12.0",
+    "@types/assert": "^1.5.10",
+    "@types/bootstrap": "^5.2.10",
+    "@types/events": "^3.0.3",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.14.202",
+    "@types/long": "^5.0.0",
+    "@types/node": "^20.11.24",
+    "@types/sortablejs": "^1.15.8",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
@@ -104,14 +114,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@types/assert": "^1.5.10",
-    "@types/bootstrap": "^5.2.10",
-    "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.14.202",
-    "@types/long": "^5.0.0",
-    "@types/node": "^20.11.24",
-    "@types/sortablejs": "^1.15.8",
-    "@types/ws": "^8.5.10",
     "assert": "^2.1.0",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
