--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "os-browserify": "^0.3.0",
     "osc": "^2.4.4",
     "path-browserify": "^1.0.1",
+    "pinia": "^2.1.7",
     "process": "^0.11.10",
     "rxjs": "^7.8.1",
     "sortablejs": "^1.15.2",
