--- a/config/interaction.yaml
+++ b/config/interaction.yaml
@@ -27,7 +27,7 @@ interaction:
             card: { x: 0, y: 0, angle: 0 },
           }
       cards:
-        - id: technology-card-1
+        - parameterTransformId: technology-card-1
           url: technology-card-1.png
           title:
             en: 'T-Tech-en-1'
@@ -35,7 +35,7 @@ interaction:
           description:
             en: 'D-Tech-en-1'
             de: 'D-Tech-de-1'
-        - id: technology-card-2
+        - parameterTransformId: technology-card-2
           url: technology-card-2.png
           title:
             en: 'T-Tech-en-2'
@@ -43,7 +43,7 @@ interaction:
           description:
             en: 'D-Tech-en-2'
             de: 'D-Tech-de-2'
-        - id: technology-card-3
+        - parameterTransformId: technology-card-3
           url: technology-card-3.png
           title:
             en: 'T-Tech-en-3'
@@ -51,7 +51,7 @@ interaction:
           description:
             en: 'D-Tech-en-3'
             de: 'D-Tech-de-3'
-        - id: technology-card-4
+        - parameterTransformId: technology-card-4
           url: technology-card-4.png
           title:
             en: 'T-Tech-en-4'
@@ -66,7 +66,7 @@ interaction:
         - { id: policy-2, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
         - { id: policy-3, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
       cards:
-        - id: policy-card-1
+        - parameterTransformId: policy-card-1
           url: policy-card-1.png
           title:
             en: 'T-Pol-en-1'
@@ -74,7 +74,7 @@ interaction:
           description:
             en: 'D-Pol-en-1'
             de: 'D-Pol-de-1'
-        - id: policy-card-2
+        - parameterTransformId: policy-card-2
           url: policy-card-2.png
           title:
             en: 'T-Pol-en-2'
@@ -82,7 +82,7 @@ interaction:
           description:
             en: 'D-Pol-en-2'
             de: 'D-Pol-de-2'
-        - id: policy-card-3
+        - parameterTransformId: policy-card-3
           url: policy-card-3.png
           title:
             en: 'T-Pol-en-3'
@@ -90,7 +90,7 @@ interaction:
           description:
             en: 'D-Pol-en-3'
             de: 'D-Pol-de-3'
-        - id: policy-card-4
+        - parameterTransformId: policy-card-4
           url: policy-card-4.png
           title:
             en: 'T-Pol-en-4'
@@ -103,7 +103,7 @@ interaction:
       slots:
         - { id: event, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
       cards:
-        - id: event-card-1
+        - parameterTransformId: event-card-1
           url: event-card-1.png
           title:
             en: 'T-Ev-en-1'
@@ -111,7 +111,7 @@ interaction:
           description:
             en: 'D-Ev-en-1'
             de: 'D-Ev-de-1'
-        - id: event-card-2
+        - parameterTransformId: event-card-2
           url: event-card-2.png
           title:
             en: 'T-Ev-en-2'
@@ -119,7 +119,7 @@ interaction:
           description:
             en: 'D-Ev-en-2'
             de: 'D-Ev-de-2'
-        - id: event-card-3
+        - parameterTransformId: event-card-3
           url: event-card-3.png
           title:
             en: 'T-Ev-en-3'
@@ -127,7 +127,7 @@ interaction:
           description:
             en: 'D-Ev-en-3'
             de: 'D-Ev-de-3'
-        - id: event-card-4
+        - parameterTransformId: event-card-4
           url: event-card-4.png
           title:
             en: 'T-Ev-en-4'
