--- a/config/interaction.yaml
+++ b/config/interaction.yaml
@@ -7,22 +7,22 @@ interaction:
       slots:
         - {
             id: technology-1,
-            x: 0,
-            y: 0,
+            x: 188.7,
+            y: 1318.22,
             angle: 0,
             card: { x: 0, y: 0, angle: 0 },
           }
         - {
             id: technology-2,
-            x: 0,
-            y: 0,
+            x: 188.7,
+            y: 1064.51,
             angle: 0,
             card: { x: 0, y: 0, angle: 0 },
           }
         - {
             id: technology-3,
-            x: 0,
-            y: 0,
+            x: 188.7,
+            y: 810.8,
             angle: 0,
             card: { x: 0, y: 0, angle: 0 },
           }
@@ -62,9 +62,20 @@ interaction:
     - id: policy
       type: action-card
       slots:
-        - { id: policy-1, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
-        - { id: policy-2, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
-        - { id: policy-3, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
+        - id: policy-1
+          x: 1368.6
+          y: 2008.4
+          angle: 0
+          card: { x: 0, y: 0, angle: 0 }
+        - id: policy-2
+          x: 1624.3
+          y: 2008.4
+          card: { x: 0, y: 0, angle: 0 }
+        - id: policy-3
+          x: 1876.4
+          y: 2008.4
+          angle: 0
+          card: { x: 0, y: 0, angle: 0 }
       cards:
         - parameterTransformId: policy-card-1
           url: policy-card-1.png
@@ -101,7 +112,11 @@ interaction:
     - id: event
       type: event-card
       slots:
-        - { id: event, x: 0, y: 0, angle: 0, card: { x: 0, y: 0, angle: 0 } }
+        - id: event
+          x: 2066.8
+          y: 154.8
+          angle: 0
+          card: { x: 0, y: 0, angle: 0 }
       cards:
         - parameterTransformId: event-card-1
           url: event-card-1.png
@@ -138,35 +153,35 @@ interaction:
     - id: reduce
       type: basic
       slots:
-        - { id: reduce-1, x: 0, y: 0, angle: 0 }
-        - { id: reduce-2, x: 0, y: 0, angle: 0 }
-        - { id: reduce-3, x: 0, y: 0, angle: 0 }
+        - { id: reduce-1, x: 1576.4, y: 1232.8, angle: 0 }
+        - { id: reduce-2, x: 1830.8, y: 1244.8, angle: 0 }
+        - { id: reduce-3, x: 2082.8, y: 1256.8, angle: 0 }
       parameterTransformIds: [reduce, reduce, reduce]
     - id: reuse
       type: basic
       slots:
-        - { id: reuse-1, x: 0, y: 0, angle: 0 }
-        - { id: reuse-2, x: 0, y: 0, angle: 0 }
-        - { id: reuse-3, x: 0, y: 0, angle: 0 }
+        - { id: reuse-1, x: 3512, y: 1392, angle: 0 }
+        - { id: reuse-2, x: 3502.4, y: 1136.8, angle: 0 }
+        - { id: reuse-3, x: 3492.8, y: 884.8, angle: 0 }
       parameterTransformIds: [reuse, reuse, reuse]
     - id: repair
       type: basic
       slots:
-        - { id: repair-1, x: 0, y: 0, angle: 0 }
-        - { id: repair-2, x: 0, y: 0, angle: 0 }
-        - { id: repair-3, x: 0, y: 0, angle: 0 }
+        - { id: repair-1, x: 1304.4, y: 842.8, angle: 0 }
+        - { id: repair-2, x: 1556.8, y: 804.8, angle: 0 }
+        - { id: repair-3, x: 1806, y: 768, angle: 0 }
       parameterTransformIds: [repair, repair, repair]
     - id: refurbish
       type: basic
       slots:
-        - { id: refurbish-1, x: 0, y: 0, angle: 0 }
-        - { id: refurbish-2, x: 0, y: 0, angle: 0 }
-        - { id: refurbish-3, x: 0, y: 0, angle: 0 }
+        - { id: refurbish-1, x: 2958.8, y: 2000.8, angle: 0 }
+        - { id: refurbish-2, x: 3192.8, y: 1898, angle: 0 }
+        - { id: refurbish-3, x: 3424, y: 1796.8, angle: 0 }
       parameterTransformIds: [refurbish, refurbish, refurbish]
     - id: recycle
       type: basic
       slots:
-        - { id: recycle-1, x: 0, y: 0, angle: 0 }
-        - { id: recycle-2, x: 0, y: 0, angle: 0 }
-        - { id: recycle-3, x: 0, y: 0, angle: 0 }
+        - { id: recycle-1, x: 464.8, y: 442.8, angle: 0 }
+        - { id: recycle-2, x: 691, y: 326, angle: 0 }
+        - { id: recycle-3, x: 916, y: 210.8, angle: 0 }
       parameterTransformIds: [recycle, recycle, recycle]
