Implement expectedLifetime This commit brings the first usable version of expectedLifetime. The code has been moved to separate files and mathjs is now a dependency. The graph matrix required fixing since the model does not have all the nodes for endpoints of edges. Thus some manual fixing is done, this will need adjustement if the model changes. The fixing ended up requiring some matrix manipulation functions that are kept in a separate file (matrixFns). That file could be optimized by loading fewer functions from mathjs, or by replacing entirely mathjs for other math multiplication and inversion functions. Currently the expected lifetime is shown in console and this function has replaced the circularity index (kept as circularity_bak).

--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "long": "^5.2.3",
+    "mathjs": "^12.4.1",
     "os-browserify": "^0.3.0",
     "osc": "^2.4.4",
     "path-browserify": "^1.0.1",
