Layout two copies of the scores at top-left and bottom-right corners

--- a/config/general.yaml
+++ b/config/general.yaml
@@ -1,2 +1,11 @@
 general:
   assetBaseDir: config/assets
+  primaryLanguage: de
+  secondaryLanguage: en
+  scoreLabels:
+    circularity:
+      en: Circularity
+      de: Kreislauf
+    happiness:
+      en: Happiness
+      de: Zufriedenheit
