Use images for visualizing the marker slots
The code for positioning the asset's anchor point onto the center of the
marker slot is quite convoluted and should be simplified and improved in
a future revision.

--- a/config/interaction.yaml
+++ b/config/interaction.yaml
@@ -1,5 +1,10 @@
 interaction:
   actionCardDelayMs: 1000
+  assets:
+    markerSlotActive:
+      url: slots/marker-slot-active_x-121_y-121.webp
+    markerSlotInactive:
+      url: slots/marker-slot-inactive_x-121_y-121.webp
   slotGroups:
     - id: technology
       type: action-card
