--- a/config/interaction.yaml
+++ b/config/interaction.yaml
@@ -9,12 +9,12 @@ interaction:
     - id: technology
       type: action-card
       slots:
-        - markerSlot: { id: technology-ms-1, x: 188.7, y: 1318.22, angle: 0 }
-          cardSlot: { id: technology-cs-1, x: 600, y: 1200, angle: 90 }
-        - markerSlot: { id: technology-ms-2, x: 188.7, y: 1064.51, angle: 0 }
-          cardSlot: { id: technology-cs-2, x: 600, y: 945, angle: 90 }
-        - markerSlot: { id: technology-ms-3, x: 188.7, y: 810.8, angle: 0 }
-          cardSlot: { id: technology-cs-3, x: 600, y: 690, angle: 90 }
+        - markerSlot: { id: technology-ms-1, x: 131, y: 744, angle: 90 }
+          cardSlot: { id: technology-cs-1, x: 470, y: 644, angle: 90 }
+        - markerSlot: { id: technology-ms-2, x: 131, y: 1000, angle: 90 }
+          cardSlot: { id: technology-cs-2, x: 470, y: 900, angle: 90 }
+        - markerSlot: { id: technology-ms-3, x: 131, y: 1256, angle: 90 }
+          cardSlot: { id: technology-cs-3, x: 470, y: 1156, angle: 90 }
       cards:
         - parameterTransformId: (T) Triple Diamantglas
           url: cards/technology/triple-diamond-glass.webp
@@ -29,12 +29,12 @@ interaction:
     - id: policy
       type: action-card
       slots:
-        - markerSlot: { id: policy-ms-1, x: 1368.6, y: 2008.4, angle: 0 }
-          cardSlot: { id: policy-cs-1, x: 1250, y: 1600, angle: 0 }
-        - markerSlot: { id: policy-ms-2, x: 1624.3, y: 2008.4, angle: 0 }
-          cardSlot: { id: policy-cs-2, x: 1510, y: 1600, angle: 0 }
-        - markerSlot: { id: policy-ms-3, x: 1876.4, y: 2008.4, angle: 0 }
-          cardSlot: { id: policy-cs-3, x: 1770, y: 1600, angle: 0 }
+        - markerSlot: { id: policy-ms-1, x: 1415, y: 2029, angle: 0 }
+          cardSlot: { id: policy-cs-1, x: 1315, y: 1690, angle: 0 }
+        - markerSlot: { id: policy-ms-2, x: 1671, y: 2029, angle: 0 }
+          cardSlot: { id: policy-cs-2, x: 1571, y: 1690, angle: 0 }
+        - markerSlot: { id: policy-ms-3, x: 1927, y: 2029, angle: 0 }
+          cardSlot: { id: policy-cs-3, x: 1827, y: 1690, angle: 0 }
       cards:
         - parameterTransformId: (P) Schul-Repair-Café
           url: cards/policy/school-repair-cafe.webp
@@ -60,11 +60,11 @@ interaction:
       maxDelayMs: 2000
       minDurationMs: 5000
       maxDurationMs: 10000
-      markerSlot: { id: event-ms, x: 2066.8, y: 154.8, angle: 0 }
+      markerSlot: { id: event-ms-1, x: 2298, y: 190, angle: 180 }
       cardSlots:
-        - { id: event-cs-1, x: 1650, y: 60, angle: 0 }
-        - { id: event-cs-2, x: 1400, y: 60, angle: 0 }
-        - { id: event-cs-3, x: 1150, y: 60, angle: 0 }
+        - { id: event-cs-1, x: 1633, y: 318, angle: 180 }
+        - { id: event-cs-2, x: 1891, y: 318, angle: 180 }
+        - { id: event-cs-3, x: 2147, y: 318, angle: 180 }
       cards:
         - parameterTransformId: (E) Weltweite Chip-Krise
           url: cards/event/global-chip-crisis.webp
@@ -79,35 +79,35 @@ interaction:
     - id: reduce
       type: basic
       slots:
-        - { id: reduce-1, x: 1576.4, y: 1232.8, angle: 0 }
-        - { id: reduce-2, x: 1830.8, y: 1244.8, angle: 0 }
-        - { id: reduce-3, x: 2082.8, y: 1256.8, angle: 0 }
+        - { id: reduce-ms-1, x: 1604, y: 1217, angle: 0 }
+        - { id: reduce-ms-2, x: 1859, y: 1229, angle: 0 }
+        - { id: reduce-ms-2, x: 2111, y: 1240, angle: 0 }
       parameterTransformIds: [reduce, reduce, reduce]
     - id: reuse
       type: basic
       slots:
-        - { id: reuse-1, x: 3512, y: 1392, angle: 0 }
-        - { id: reuse-2, x: 3502.4, y: 1136.8, angle: 0 }
-        - { id: reuse-3, x: 3492.8, y: 884.8, angle: 0 }
+        - { id: reuse-ms-1, x: 3494, y: 866, angle: -90 }
+        - { id: reuse-ms-2, x: 3503, y: 1118, angle: -90 }
+        - { id: reuse-ms-3, x: 3513, y: 1373, angle: -90 }
       parameterTransformIds: [reuse, reuse, reuse]
     - id: repair
       type: basic
       slots:
-        - { id: repair-1, x: 1304.4, y: 842.8, angle: 0 }
-        - { id: repair-2, x: 1556.8, y: 804.8, angle: 0 }
-        - { id: repair-3, x: 1806, y: 768, angle: 0 }
+        - { id: repair-ms-1, x: 1390, y: 927, angle: 180 }
+        - { id: repair-ms-2, x: 1634, y: 855, angle: 180 }
+        - { id: repair-ms-3, x: 1878, y: 783, angle: 180 }
       parameterTransformIds: [repair, repair, repair]
     - id: refurbish
       type: basic
       slots:
-        - { id: refurbish-1, x: 2958.8, y: 2000.8, angle: 0 }
-        - { id: refurbish-2, x: 3192.8, y: 1898, angle: 0 }
-        - { id: refurbish-3, x: 3424, y: 1796.8, angle: 0 }
+        - { id: refurbish-ms-1, x: 2959, y: 1981, angle: 0 }
+        - { id: refurbish-ms-2, x: 3194, y: 1879, angle: 0 }
+        - { id: refurbish-ms-3, x: 3424, y: 1778, angle: 0 }
       parameterTransformIds: [refurbish, refurbish, refurbish]
     - id: recycle
       type: basic
       slots:
-        - { id: recycle-1, x: 464.8, y: 442.8, angle: 0 }
-        - { id: recycle-2, x: 691, y: 326, angle: 0 }
-        - { id: recycle-3, x: 916, y: 210.8, angle: 0 }
+        - { id: recycle-ms-1, x: 465, y: 423, angle: 180 }
+        - { id: recycle-ms-2, x: 693, y: 306, angle: 180 }
+        - { id: recycle-ms-3, x: 916, y: 190, angle: 180 }
       parameterTransformIds: [recycle, recycle, recycle]
